--- a/index.html
+++ b/index.html
@@ -937,7 +937,7 @@ padding-inline: 10px;
   }
 }
 #es-magne.es-magne .es-disclaimer {
-  margin-bottom: 32px;
+  margin-block: 32px;
   padding: 0 16px;
 }
 #es-magne.es-magne .es-disclaimer__text {
@@ -1121,15 +1121,10 @@ padding-inline: 10px;
     <div class="es-info">
       <div class="es-info__content">
         <p class="es-info__text">
-          Suplement diety Magne-B<sub>6</sub> Zmęczenie i&nbsp;Stres zawiera wyciąg z&nbsp;korzenia 
-          <strong class="es-info__text--bold">
-            ashwagandhy, która wspiera balans emocjonalny<sup>3</sup> i&nbsp;wzmacnia odporność na&nbsp;stres.<sup>4</sup>
-          </strong>
+          Suplement diety Magne-B<sub>6</sub> Zmęczenie i&nbsp;Stres zawiera wyciąg z&nbsp;korzenia <strong class="es-info__text--bold">ashwagandhy, która wspiera balans emocjonalny<sup>3</sup> i&nbsp;wzmacnia odporność na&nbsp;stres.<sup>4</sup></strong>
         </p>
         <p class="es-info__text">
-          <strong class="es-info__text--bold">
-            Ashwagandha pomaga utrzymać relaksację, dobre samopoczucie psychiczne, jak również wspiera fizyczną witalność organizmu.
-          </strong>
+          <strong class="es-info__text--bold">Ashwagandha pomaga utrzymać relaksację, dobre samopoczucie psychiczne, jak również wspiera fizyczną witalność organizmu.</strong>
         </p>
         <img class="es-info__img" src="https://s3.eu-central-1.amazonaws.com/cdn.rc-eu-central2.nexus.estorelabs.com/public/static/230322-SF-23-Magne-ZiS-NEW-OLMED-APTEKA/img/ashwaganda.webp" alt="Jak prowadzić zdrowy tryb życia? Prewencyjnie stosuj preparaty, jak Magne B6 Zmęczenie i Stres. Ashwagandha na co pomaga?" loading="lazy" />
       </div>
@@ -1141,9 +1136,7 @@ padding-inline: 10px;
           Aby mieć maksymalną kontrolę nad stresem, warto przyjmować adaptogeny - rośliny bogate w&nbsp;związki podnoszące całościową odporność na stres i&nbsp;pomagające organizmowi wrócić do&nbsp;stanu wewnętrznej równowagi.
         </p>
         <p class="es-info__text">
-          <strong class="es-info__text--bold">
-            Ashwagandha to roślina bogata w&nbsp;witanolidy, o&nbsp;działaniu łagodzącym stres i&nbsp;jeden z&nbsp;najlepiej przebadanych adaptogenów, którego skuteczność wielokrotnie potwierdzono naukowo.<sup>5</sup>
-          </strong>
+          <strong class="es-info__text--bold">Ashwagandha to roślina bogata w&nbsp;witanolidy, o&nbsp;działaniu łagodzącym stres i&nbsp;jeden z&nbsp;najlepiej przebadanych adaptogenów, którego skuteczność wielokrotnie potwierdzono naukowo.<sup>5</sup></strong>
         </p>
       </div>
     </div>
@@ -1308,54 +1301,25 @@ padding-inline: 10px;
 
     <div class="es-disclaimer">
       <p class="es-disclaimer__text">
-        <strong class="es-disclaimer__text--strong">
-          Magne-B<sub>6</sub> Zmęczenie i Stres
-        </strong>, suplement diety, tabletki powlekane.
-        <strong class="es-disclaimer__text--strong">
-          Zawartość składników aktywnych w zalecanej porcji dziennej (1 tabletka)
-        </strong>
-        : 60 mg magnezu– 16% RWS; 1,4 mg witaminy B<sub>6</sub> – 100% RWS; 80 mg wyciągu z korzenia ashwagandhy, standaryzowanego na 5% witanolidów (Whitania somnifera). [RWS – referencyjna wartość spożycia].
-        <strong class="es-disclaimer__text--strong">
-          Zalecane spożycie
-        </strong>
-        : Dorośli - 1&nbsp;tabletka dziennie. Najlepiej przyjmować w&nbsp;godzinach porannych. Czas stosowania suplementu: 4&nbsp;tygodnie. W&nbsp;razie potrzeby można powtórzyć. Nie należy przekraczać zalecanej porcji do spożycia w&nbsp;ciągu dnia. Suplement diety nie może być stosowany jako substytut (zamiennik) zróżnicowanej diety. Prowadzenie zdrowego trybu życia i&nbsp;stosowanie zrównoważonej diety jest niezbędne dla zachowania dobrego stanu zdrowia. Produkt nie może być stosowany przez osoby uczulone na którykolwiek ze składników preparatu. Stosowanie u&nbsp;osób będących pod kontrolą lekarza wyłącznie po konsultacji z&nbsp;lekarzem. Produkt nie powinien być spożywany w&nbsp;przypadku stosowania leków o&nbsp;działaniu uspokajającym, nasennym, przeciwpadaczkowym. Nie stosować u&nbsp;dzieci, kobiet w&nbsp;ciąży i&nbsp;w&nbsp;trakcie laktacji. Podmiot wprowadzający do obrotu: Opella Healthcare Poland Sp. z o. o.
+        <strong class="es-disclaimer__text--strong">Magne-B<sub>6</sub> Zmęczenie i Stres</strong>, suplement diety, tabletki powlekane.
+        <strong class="es-disclaimer__text--strong">Zawartość składników aktywnych w zalecanej porcji dziennej (1&nbsp;tabletka)</strong>: 60 mg magnezu– 16% RWS; 1,4 mg witaminy B<sub>6</sub> – 100% RWS; 80 mg wyciągu z korzenia ashwagandhy, standaryzowanego na 5% witanolidów (Whitania somnifera). [RWS – referencyjna wartość spożycia].
+        <strong class="es-disclaimer__text--strong">Zalecane spożycie</strong>: Dorośli - 1&nbsp;tabletka dziennie. Najlepiej przyjmować w&nbsp;godzinach porannych. Czas stosowania suplementu: 4&nbsp;tygodnie. W&nbsp;razie potrzeby można powtórzyć. Nie należy przekraczać zalecanej porcji do spożycia w&nbsp;ciągu dnia. Suplement diety nie może być stosowany jako substytut (zamiennik) zróżnicowanej diety. Prowadzenie zdrowego trybu życia i&nbsp;stosowanie zrównoważonej diety jest niezbędne dla zachowania dobrego stanu zdrowia. Produkt nie może być stosowany przez osoby uczulone na którykolwiek ze składników preparatu. Stosowanie u&nbsp;osób będących pod kontrolą lekarza wyłącznie po konsultacji z&nbsp;lekarzem. Produkt nie powinien być spożywany w&nbsp;przypadku stosowania leków o&nbsp;działaniu uspokajającym, nasennym, przeciwpadaczkowym. Nie stosować u&nbsp;dzieci, kobiet w&nbsp;ciąży i&nbsp;w&nbsp;trakcie laktacji. Podmiot wprowadzający do obrotu: Opella Healthcare Poland Sp. z o. o.
       </p>
       <p class="es-disclaimer__text">
-      <strong class="es-disclaimer__text--strong">
-        Magne B<sub>6</sub> Forte
-      </strong>
-      , tabletki powlekane, 100&nbsp;mg jonów magnezu w&nbsp;postaci cytrynianu magnezu i&nbsp;10&nbsp;mg witaminy B<sub>6</sub>.
-        <strong class="es-disclaimer__text--strong">
-          Wskazania
-        </strong>
-        : niedobór magnezu. Występowanie tych objawów może wskazywać na niedobór magnezu: nerwowość, drażliwość, wahania nastroju, łagodny lęk, niepokój, przejściowe uczucie zmęczenia, ospałość, zaburzenia snu w&nbsp;niewielkim nasileniu; objawy lęku, takie jak kurcze przewodu pokarmowego lub kołatanie serca (bez zaburzeń serca); kurcze mięśni, mrowienie, drganie powiek. Uzupełnienie magnezu może złagodzić te objawy. W&nbsp;przypadku braku poprawy po miesiącu stosowania leku, kontynuowanie leczenia nie jest zalecane. 
-        <strong class="es-disclaimer__text--strong">
-          Podmiot odpowiedzialny
-        </strong>
-        : Opella Healthcare Poland Sp. z o. o. grupa Sanofi, <em>{ChPL 04/2022}</em>
+        <strong class="es-disclaimer__text--strong">Magne B<sub>6</sub> Forte</strong>, tabletki powlekane, 100&nbsp;mg jonów magnezu w&nbsp;postaci cytrynianu magnezu i&nbsp;10&nbsp;mg witaminy B<sub>6</sub>.
+        <strong class="es-disclaimer__text--strong">Wskazania</strong>: niedobór magnezu. Występowanie tych objawów może wskazywać na niedobór magnezu: nerwowość, drażliwość, wahania nastroju, łagodny lęk, niepokój, przejściowe uczucie zmęczenia, ospałość, zaburzenia snu w&nbsp;niewielkim nasileniu; objawy lęku, takie jak kurcze przewodu pokarmowego lub kołatanie serca (bez zaburzeń serca); kurcze mięśni, mrowienie, drganie powiek. Uzupełnienie magnezu może złagodzić te objawy. W&nbsp;przypadku braku poprawy po miesiącu stosowania leku, kontynuowanie leczenia nie jest zalecane. 
+        <strong class="es-disclaimer__text--strong">Podmiot odpowiedzialny</strong>: Opella Healthcare Poland Sp. z o. o. grupa Sanofi, <em>{ChPL 04/2022}</em>
       </p>
       <p class="es-disclaimer__text">
-        <strong class="es-disclaimer__text--strong">
-          Magne B<sub>6</sub>
-        </strong>
-        , tabletki powlekane, 48&nbsp;mg jonów magnezu w postaci magnezu mleczanu i&nbsp;5&nbsp;mg witaminy B<sub>6</sub>. 
-        <strong class="es-disclaimer__text--strong">
-          Wskazania
-        </strong>
-        : niedobór magnezu. Występowanie tych objawów może wskazywać na niedobór magnezu: nerwowość, drażliwość, wahania nastroju, łagodny lęk, niepokój, przejściowe uczucie zmęczenia, ospałość, zaburzenia snu w&nbsp;niewielkim nasileniu; objawy lęku, takie jak kurcze przewodu pokarmowego lub kołatanie serca (bez zaburzeń serca); kurcze mięśni, mrowienie, drganie powiek. Uzupełnienie magnezu może złagodzić te objawy. W&nbsp;przypadku braku poprawy po miesiącu stosowania leku, kontynuowanie leczenia nie jest zalecane. 
-        <strong class="es-disclaimer__text--strong">
-          Podmiot odpowiedzialny
-        </strong>
-        : Opella Healthcare Poland Sp. z o. o. grupa Sanofi, <em>{ChPL 04/2022}</em>
+        <strong class="es-disclaimer__text--strong">Magne B<sub>6</sub></strong>, tabletki powlekane, 48&nbsp;mg jonów magnezu w postaci magnezu mleczanu i&nbsp;5&nbsp;mg witaminy B<sub>6</sub>. 
+        <strong class="es-disclaimer__text--strong">Wskazania</strong>: niedobór magnezu. Występowanie tych objawów może wskazywać na niedobór magnezu: nerwowość, drażliwość, wahania nastroju, łagodny lęk, niepokój, przejściowe uczucie zmęczenia, ospałość, zaburzenia snu w&nbsp;niewielkim nasileniu; objawy lęku, takie jak kurcze przewodu pokarmowego lub kołatanie serca (bez zaburzeń serca); kurcze mięśni, mrowienie, drganie powiek. Uzupełnienie magnezu może złagodzić te objawy. W&nbsp;przypadku braku poprawy po miesiącu stosowania leku, kontynuowanie leczenia nie jest zalecane. 
+        <strong class="es-disclaimer__text--strong">Podmiot odpowiedzialny</strong>: Opella Healthcare Poland Sp. z o. o. grupa Sanofi, <em>{ChPL 04/2022}</em>
       </p>
     </div>
 
     <div class="es-ref">
       <p class="es-ref__text">
-        <strong class="es-disclaimer__text--strong">
-          Przypisy
-        </strong>
-        :<br />
+        <strong class="es-disclaimer__text--strong">Przypisy</strong>:<br />
         <sup>1.</sup> Dotyczy cytrynianu magnezu, Ranade WV. Bioavailability and pharmacokinetics ofnmagnesium after administration of magnesium salts to humans. Am J Ther. 2001 Sep-Oct;8(5):345-57.<br />
         <sup>2.</sup> Rozporządzenie Komisji (UE) nr 432/2012 z&nbsp;dn. 16 maja 2012 r.<br />
         <sup>3.</sup> Ashwagandha pomaga w&nbsp;utrzymaniu relaksu, dobrego samopoczucia psychicznego i&nbsp;fizycznego (ID 2183)<br />
